[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "lct-web"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Web service for Lunar Club and Lunar Club II information."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pylunar==0.7.2",
    "tzdata==2024.1"
]

[project.urls]
Repository = "https://github.com/mareuter/lct-web"

[project.optional-dependencies]
dev = [
    "lct-web[lint,test]",
    "tox==4.13.0"
]
test = [
    "coverage[toml]==7.4.3",
    "httpx==0.27.0",
    "pytest==8.0.2"
]
lint = [
    "pre-commit==3.6.2"
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "docs/**",
]
ignore = [
    "D104"
]
line-length = 110
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W"
]

[tool.ruff.per-file-ignores]
"src/lct_web/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"tests/**" = [
    "D101",
    "D102",
    "D103",
]

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
