[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "lct-web"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Web service for Lunar Club and Lunar Club II information."
readme = "README.rst"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pylunar==0.11.0",
]

[project.urls]
Repository = "https://github.com/mareuter/lct-web"

[project.optional-dependencies]
dev = [
    "lct-web[lint,test]",
    "tox==4.34.1"
]
test = [
    "coverage[toml]==7.13.2",
    "httpx==0.28.1",
    "pytest==9.0.2"
]
lint = [
    "pre-commit==4.5.1"
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "docs/**",
]
ignore = [
    "D104"
]
line-length = 110
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W"
]

[tool.ruff.per-file-ignores]
"src/lct_web/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"tests/**" = [
    "D101",
    "D102",
    "D103",
]

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
